gcc/testsuite/rust/rustc/ui/modules/path-invalid-form.rs
#[path = 123]  // { dg-error "" "" { target *-*-* } }
mod foo;

fn main() {}

